core/dp-finalizer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-goserver
  namespace: wessonli-test
  finalizers:
  - a.b.c/abc
spec:
  selector:
    matchLabels:
      app: goserver
  revisionHistoryLimit: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: mirrors.tencent.com/wessonli-test/goserver:latest
        imagePullPolicy: IfNotPresent
