core/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-goserver
  namespace: wessonli-test
spec:
  selector:
    matchLabels:
      app: goserver
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: mirrors.tencent.com/wessonli-test/goserver:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: content-type
              value: application/json
            path: /todos/1
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
