core/pod-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: teststorage
  labels:
    app: teststorage
  annotations:
    test.k8s.io/storageopt: "size_softlimit=1G,size=1G,inode=2200000,inode_softlimit=2000000"
spec:
  containers:
  - name: busybox
    image:  busybox
    command: ["/bin/sh", "-c", "while true; do dd if=/dev/zero of=$(date '+%s').out count=1 bs=10MB; sleep 1; done"]
    resources:
      limits:
        ephemeral-storage: 2G
      requests:
        ephemeral-storage: 2G
  nodeSelector:
    kubernetes.io/hostname: 192.168.1.2
