core/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: busybox
    command: ["/bin/sh", "-ec", "ls /mnt/data; sleep 999999"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
