core/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-web
  namespace: wessonli-test
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx-tmp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: web
